--- a/core/iDDS/templates/workflows.html
+++ b/core/iDDS/templates/workflows.html
@@ -53,12 +53,12 @@
          <thead>
              <th>Request ID</th>
              <th>Request Status</th>
+             <th>WorkFlow Name</th>
              <th>Created At</th>
              <th>Total tasks</th>
              <th>Tasks</th>
              <th>Remaining files</th>
              <th>Processed files</th>
-             <th>Processing files</th>
              <th>Total files</th>
          </thead>
          <tbody></tbody>
@@ -107,12 +107,18 @@ var requests_table = $('#requests_table').DataTable({
     order: [[0, "desc"]],
     columns: [
         { data: "request_id", title: "request_id", className: "num" },
-        { data: "r_status", title: "r_status" },
-        { data: "created_at", title: "created_at" },
-        { data: "total_tasks", title: "total_tasks" },
+        { data: "r_status", title: "workflow status" },
+        { data: "r_name", title: "workflow name",
+            render: function(data, type, row, meta) {
+                retVal = '<a target=blank href = "{% url "taskList" %}?taskname='+row['r_name']+'*">'+row['r_name']+'</a>'
+                return retVal;
+            }
+        },
+        { data: "created_at", title: "created at" },
+        { data: "total_tasks", title: "total tasks" },
         { data: "tasks_links", title: "tasks",
            render: function(data, type, row, meta) {
-            retVal = ""
+            retVal = ''
             for (var key in row['tasks_links']) {
 
                 switch(key) {
@@ -125,11 +131,8 @@ var requests_table = $('#requests_table').DataTable({
                   case 'Running':
                     retVal += '<a target=blank href = "{% url "taskList" %}?jeditaskid='+row['tasks_links'][key]+'"><span class="running">'+key+'('+row['tasks_statuses'][key]+')'+'</span></a> ';
                     break;
-                  case 'Submitted':
-                    retVal += '<a target=blank href = "{% url "taskList" %}?jeditaskid='+row['tasks_links'][key]+'"><span class="registered">'+key+'('+row['tasks_statuses'][key]+')'+'</span></a> ';
-                    break;
                   default:
-                    retVal += '<a target=blank href = "{% url "taskList" %}?jeditaskid='+row['tasks_links'][key]+'">'+key+'('+row['tasks_statuses'][key]+')'+'</a> ';
+                    retVal += '<span class="registered">'+key+'('+row['tasks_statuses'][key]+')'+'</span> ';
                 }
             }
             return retVal;
@@ -138,7 +141,6 @@ var requests_table = $('#requests_table').DataTable({
 
         { data: "remaining_files", title: "remaining_files" },
         { data: "processed_files", title: "processed_files" },
-        { data: "processing_files", title: "processing_files" },
         { data: "total_files", title: "total_files" },
 
         {#{ data: "scope", title: "scope",},#}
