--- a/core/templates/taskInfo.html
+++ b/core/templates/taskInfo.html
@@ -78,9 +78,9 @@
         {% if task.dsinfo %}
             <td> {{ task.totev }} |
                 <span class='finished'>{{ task.totevproc }} ({{ task.pctfinished|floatformat }}%)</span></td>
-            <td style="text-align:right;"> {{ task.totevhs06 }}<br>{{ task.currenttotevhs06 }}<br><span
-                    class='finished'>{{ task.totevprochs06 }}</span><br><span
-                    class='failed'>{{ task.failedevprochs06 }}</span></td>
+            <td style="text-align:right;"> {{ task.totevhs06 }}<br>{{ task.currenttotevhs06 }}, {{ task.totevprochs06_requested }}<br><span
+                    class='finished'>{{ task.totevprochs06 }}, {{ task.totevprochs06_requested }}</span><br><span
+                    class='failed'>{{ task.failedevprochs06 }}, {{ task.failedevprochs06_requested }}</span></td>
             <td> {{ task.dsinfo.nfiles }} |
                 <span class='finished'>{{ task.dsinfo.nfilesfinished }} ({{ task.dsinfo.pctfinished|floatformat }}%)</span>
                 {% if task.dsinfo.nfilesfailed > 0 %} |
